Revamp index.html for luxury rabbit doll theme

--- a/index.html
+++ b/index.html
@@ -1,96 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>11Lotus | Luxury Rabbit Dolls</title>
-    <style>
-        /* Luxury Styles */
-        body {
-            margin: 0;
-            font-family: 'Playfair Display', serif; /* Luxury Font */
-            background-color: #fffafb; /* Soft White/Cream */
-            color: #333;
-            text-align: center;
-        }
-
-        header {
-            padding: 50px 20px;
-            border-bottom: 1px solid #eee;
-        }
-
-        .logo {
-            font-size: 2.5rem;
-            letter-spacing: 5px;
-            font-weight: 300;
-            text-transform: uppercase;
-        }
-
-        .hero {
-            padding: 100px 20px;
-            background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)), url('your-rabbit-doll-image.jpg');
-            background-size: cover;
-            background-position: center;
-        }
-
-        .hero h1 {
-            font-size: 3.5rem;
-            margin-bottom: 10px;
-            color: #d4af37; /* Gold Accent */
-        }
-
-        .hero p {
-            font-size: 1.2rem;
-            font-style: italic;
-            color: #777;
-        }
-
-        .btn-luxury {
-            display: inline-block;
-            margin-top: 30px;
-            padding: 15px 40px;
-            border: 1px solid #d4af37;
-            text-decoration: none;
-            color: #d4af37;
-            transition: 0.3s;
-            letter-spacing: 2px;
-        }
-
-        .btn-luxury:hover {
-            background-color: #d4af37;
-            color: white;
-        }
-
-        footer {
-            padding: 40px;
-            font-size: 0.8rem;
-            color: #999;
-        }
-    </style>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+<title>11LOTUS | Luxury Mystery Rabbit</title>
+<style>
+body { background-color: #050505; color: #ffffff; font-family: sans-serif; text-align: center; margin: 0; }
+header { padding: 100px 20px; background: radial-gradient(circle, #1a1a1a, #050505); }
+h1 { color: #d4af37; font-size: 50px; letter-spacing: 10px; margin: 0; }
+p.tagline { color: #888; letter-spacing: 5px; text-transform: uppercase; font-size: 12px; }
+.box-card { border: 1px solid #d4af37; padding: 50px; max-width: 400px; margin: 50px auto; background: #111; }
+.price { font-size: 30px; margin: 20px 0; color: #d4af37; }
+.btn { border: 1px solid #d4af37; color: #d4af37; padding: 15px 30px; text-decoration: none; display: inline-block; }
+.btn:hover { background: #d4af37; color: #000; }
+</style>
 </head>
 <body>
-
-    <header>
-        <div class="logo">11LOTUS</div>
-    </header>
-
-    <section class="hero">
-        <h1>Elegance in Every Hug</h1>
-        <p>The Premium Rabbit Doll Collection for Stress Relief & Gifting.</p>
-        <a href="#" class="btn-luxury">DISCOVER THE COLLECTION</a>
-    </section>
-
-    <section style="padding: 50px;">
-        <h2>Crafted for Gen Z</h2>
-        <p style="max-width: 600px; margin: 0 auto; line-height: 1.8;">
-            11Lotus represents peace and comfort. Our signature rabbit doll is designed to be your ultimate companion for stress relief and the perfect gift for those you love.
-        </p>
-    </section>
-
-    <footer>
-        &copy; 2026 11Lotus Official. All Rights Reserved.
-    </footer>
-
+<header>
+<h1>11LOTUS</h1>
+<p class="tagline">The Art of Mystery</p>
+</header>
+<div class="box-card">
+<h2>THE NOIR BOX</h2>
+<p>Luxury Mystery Rabbit Doll. Handcrafted for comfort.</p>
+<div class="price">Rs. 8,500</div>
+<a href="" class="btn">ORDER NOW</a>
+</div>
+<footer>
+<p style="color:#444; font-size:10px;">&copy; 2026 11LOTUS OFFICIAL</p>
+</footer>
 </body>
 </html>
