--- a/index.html
+++ b/index.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>11LOTUS | Luxury Mystery Rabbit</title>
 <style>
-body { background-color: #050505; color: #ffffff; font-family: sans-serif; text-align: center; margin: 0; }
-header { padding: 100px 20px; background: radial-gradient(circle, #1a1a1a, #050505); }
-h1 { color: #d4af37; font-size: 50px; letter-spacing: 10px; margin: 0; }
-p.tagline { color: #888; letter-spacing: 5px; text-transform: uppercase; font-size: 12px; }
-.box-card { border: 1px solid #d4af37; padding: 50px; max-width: 400px; margin: 50px auto; background: #111; }
-.price { font-size: 30px; margin: 20px 0; color: #d4af37; }
-.btn { border: 1px solid #d4af37; color: #d4af37; padding: 15px 30px; text-decoration: none; display: inline-block; }
-.btn:hover { background: #d4af37; color: #000; }
+body { margin: 0; background-color: #0a0a0a; color: #ffffff; font-family: sans-serif; text-align: center; }
+header { height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; background: radial-gradient(circle, #1a1a1a 0%, #0a0a0a 100%); }
+.main-logo { width: 300px; margin-bottom: 20px; filter: drop-shadow(0 0 15px rgba(212, 175, 55, 0.3)); }
+.tagline { font-size: 14px; letter-spacing: 5px; text-transform: uppercase; color: #888; }
+.mystery-section { padding: 100px 20px; }
+.box-card { border: 1px solid rgba(212, 175, 55, 0.3); max-width: 450px; margin: 0 auto; padding: 50px; background: #111; box-shadow: 0 30px 80px rgba(0,0,0,0.9); }
+.box-title { color: #d4af37; font-size: 32px; margin-bottom: 15px; letter-spacing: 3px; }
+.price { font-size: 35px; margin: 25px 0; font-weight: bold; }
+.btn-luxury { display: inline-block; padding: 18px 45px; border: 1px solid #d4af37; text-decoration: none; color: #d4af37; letter-spacing: 2px; transition: 0.4s; }
+.btn-luxury:hover { background-color: #d4af37; color: #000; box-shadow: 0 0 25px rgba(212, 175, 55, 0.4); }
+footer { padding: 80px; font-size: 12px; color: #444; letter-spacing: 2px; }
 </style>
 </head>
 <body>
 <header>
-<h1>11LOTUS</h1>
-<p class="tagline">The Art of Mystery</p>
+<img src="" alt="11Lotus Logo" class="main-logo">
+<div class="tagline">Elegance in Every Hug</div>
 </header>
+<section class="mystery-section">
 <div class="box-card">
-<h2>THE NOIR BOX</h2>
-<p>Luxury Mystery Rabbit Doll. Handcrafted for comfort.</p>
-<div class="price">Rs. 8,500</div>
-<a href="" class="btn">ORDER NOW</a>
+<div class="box-title">THE NOIR BOX</div>
+<p style="color: #777; font-style: italic;">Unveil a handcrafted luxury rabbit doll. Every box holds a unique companion designed for peace.</p>
+<div class="price">$23.00</div>
+<a href="" class="btn-luxury">RESERVE NOW</a>
 </div>
-<footer>
-<p style="color:#444; font-size:10px;">&copy; 2026 11LOTUS OFFICIAL</p>
-</footer>
+</section>
+<footer> &copy; 2026 11LOTUS LUXURY TOYS. ALL RIGHTS RESERVED. </footer>
 </body>
 </html>
