Revise title, header, and footer for 11LOTUS page
Updated the title, header, and footer content. Enhanced styling for various elements and improved layout.

--- a/index.html
+++ b/index.html
@@ -4,34 +4,39 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>11LOTUS | Luxury Mystery Rabbit</title>
+<title>11LOTUS | The Silent Companion</title>
 <style>
-body { margin: 0; background-color: #0a0a0a; color: #ffffff; font-family: sans-serif; text-align: center; }
-header { height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; background: radial-gradient(circle, #1a1a1a 0%, #0a0a0a 100%); }
-.main-logo { width: 300px; margin-bottom: 20px; filter: drop-shadow(0 0 15px rgba(212, 175, 55, 0.3)); }
-.tagline { font-size: 14px; letter-spacing: 5px; text-transform: uppercase; color: #888; }
-.mystery-section { padding: 100px 20px; }
-.box-card { border: 1px solid rgba(212, 175, 55, 0.3); max-width: 450px; margin: 0 auto; padding: 50px; background: #111; box-shadow: 0 30px 80px rgba(0,0,0,0.9); }
-.box-title { color: #d4af37; font-size: 32px; margin-bottom: 15px; letter-spacing: 3px; }
-.price { font-size: 35px; margin: 25px 0; font-weight: bold; }
-.btn-luxury { display: inline-block; padding: 18px 45px; border: 1px solid #d4af37; text-decoration: none; color: #d4af37; letter-spacing: 2px; transition: 0.4s; }
-.btn-luxury:hover { background-color: #d4af37; color: #000; box-shadow: 0 0 25px rgba(212, 175, 55, 0.4); }
-footer { padding: 80px; font-size: 12px; color: #444; letter-spacing: 2px; }
+body { margin: 0; background-color: #050505; color: #ffffff; font-family: sans-serif; text-align: center; }
+header { height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; background: radial-gradient(circle, #1a1a1a 0%, #050505 100%); }
+.main-logo { width: 320px; margin-bottom: 20px; filter: drop-shadow(0 0 15px rgba(212, 175, 55, 0.3)); }
+.tagline { font-size: 14px; letter-spacing: 5px; text-transform: uppercase; color: #d4af37; font-weight: bold; }
+.mystery-section { padding: 100px 20px; background-color: #0d0d0d; }
+.box-card { border: 1px solid rgba(212, 175, 55, 0.3); max-width: 500px; margin: 0 auto; padding: 60px 40px; background: #111; box-shadow: 0 40px 100px rgba(0,0,0,0.9); }
+.headline { color: #d4af37; font-size: 35px; letter-spacing: 3px; margin-bottom: 20px; }
+.copy-text { color: #888; font-style: italic; line-height: 1.8; margin-bottom: 30px; }
+.price { font-size: 45px; margin: 25px 0; font-weight: 300; color: #ffffff; }
+.btn-premium { display: inline-block; padding: 20px 55px; border: 1px solid #d4af37; text-decoration: none; color: #d4af37; letter-spacing: 3px; text-transform: uppercase; transition: 0.5s; }
+.btn-premium:hover { background-color: #d4af37; color: #000; box-shadow: 0 0 30px rgba(212, 175, 55, 0.4); }
+footer { padding: 100px; font-size: 12px; color: #333; letter-spacing: 2px; }
 </style>
 </head>
 <body>
 <header>
-<img src="" alt="11Lotus Logo" class="main-logo">
-<div class="tagline">Elegance in Every Hug</div>
+<img src="logo.png" alt="11Lotus Logo" class="main-logo">
+<div class="tagline">The Silent Companion</div>
 </header>
 <section class="mystery-section">
 <div class="box-card">
-<div class="box-title">THE NOIR BOX</div>
-<p style="color: #777; font-style: italic;">Unveil a handcrafted luxury rabbit doll. Every box holds a unique companion designed for peace.</p>
+<h2 class="headline">THE NOIR EDITION</h2>
+<p class="copy-text">
+Specifically curated for the dreamers, the lovers, and those seeking refuge from the chaos.
+Whether you're in solitude or gifting a symbol of peace, 11Lotus brings a sanctuary of softness
+to soothe the stressed mind.
+</p>
 <div class="price">$23.00</div>
-<a href="" class="btn-luxury">RESERVE NOW</a>
+<a href="" class="btn-premium">Reserve Your Mystery</a>
 </div>
 </section>
-<footer> &copy; 2026 11LOTUS LUXURY TOYS. ALL RIGHTS RESERVED. </footer>
+<footer> &copy; 2026 11LOTUS OFFICIAL | CRAFTED FOR THE EXTRAORDINARY </footer>
 </body>
 </html>
