Revise styles and text in index.html
Updated styling and content for improved aesthetics and clarity.

--- a/index.html
+++ b/index.html
@@ -8,35 +8,52 @@
 <style>
 body { margin: 0; background-color: #050505; color: #ffffff; font-family: sans-serif; text-align: center; }
 header { height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; background: radial-gradient(circle, #1a1a1a 0%, #050505 100%); }
-.main-logo { width: 320px; margin-bottom: 20px; filter: drop-shadow(0 0 15px rgba(212, 175, 55, 0.3)); }
-.tagline { font-size: 14px; letter-spacing: 5px; text-transform: uppercase; color: #d4af37; font-weight: bold; }
-.mystery-section { padding: 100px 20px; background-color: #0d0d0d; }
-.box-card { border: 1px solid rgba(212, 175, 55, 0.3); max-width: 500px; margin: 0 auto; padding: 60px 40px; background: #111; box-shadow: 0 40px 100px rgba(0,0,0,0.9); }
-.headline { color: #d4af37; font-size: 35px; letter-spacing: 3px; margin-bottom: 20px; }
-.copy-text { color: #888; font-style: italic; line-height: 1.8; margin-bottom: 30px; }
-.price { font-size: 45px; margin: 25px 0; font-weight: 300; color: #ffffff; }
-.btn-premium { display: inline-block; padding: 20px 55px; border: 1px solid #d4af37; text-decoration: none; color: #d4af37; letter-spacing: 3px; text-transform: uppercase; transition: 0.5s; }
-.btn-premium:hover { background-color: #d4af37; color: #000; box-shadow: 0 0 30px rgba(212, 175, 55, 0.4); }
-footer { padding: 100px; font-size: 12px; color: #333; letter-spacing: 2px; }
+
+/* Premium Logo Styling */
+.main-logo { width: 350px; margin-bottom: 20px; filter: drop-shadow(0 0 15px rgba(212, 175, 55, 0.4)); }
+
+.tagline { font-size: 14px; letter-spacing: 8px; text-transform: uppercase; color: #d4af37; font-weight: bold; margin-top: 10px; }
+
+.mystery-section { padding: 120px 20px; background-color: #080808; }
+
+.box-card { border: 1px solid rgba(212, 175, 55, 0.25); max-width: 550px; margin: 0 auto; padding: 80px 40px; background: linear-gradient(145deg, #111, #050505); box-shadow: 0 50px 100px rgba(0,0,0,0.9); }
+
+.headline { color: #d4af37; font-size: 38px; letter-spacing: 5px; margin-bottom: 25px; text-transform: uppercase; }
+
+/* Oya kiyapu target market ekata galapena wadan */
+.copy-text { color: #aaaaaa; font-style: italic; line-height: 2; margin-bottom: 40px; font-weight: 200; font-size: 16px; }
+
+.price { font-size: 50px; margin: 30px 0; font-weight: 100; letter-spacing: 3px; }
+
+.btn-premium { display: inline-block; padding: 22px 65px; border: 1px solid #d4af37; text-decoration: none; color: #d4af37; letter-spacing: 4px; text-transform: uppercase; transition: 0.6s; font-size: 13px; }
+
+.btn-premium:hover { background-color: #d4af37; color: #000; box-shadow: 0 0 40px rgba(212, 175, 55, 0.5); transform: translateY(-5px); }
+
+footer { padding: 100px; font-size: 11px; color: #333; letter-spacing: 3px; text-transform: uppercase; border-top: 1px solid #111; }
 </style>
+
 </head>
 <body>
+
 <header>
 <img src="logo.png" alt="11Lotus Logo" class="main-logo">
 <div class="tagline">The Silent Companion</div>
 </header>
+
 <section class="mystery-section">
 <div class="box-card">
-<h2 class="headline">THE NOIR EDITION</h2>
+<h2 class="headline">The Noir Edition</h2>
 <p class="copy-text">
-Specifically curated for the dreamers, the lovers, and those seeking refuge from the chaos.
-Whether you're in solitude or gifting a symbol of peace, 11Lotus brings a sanctuary of softness
-to soothe the stressed mind.
+Crafted for the dreamers, the lovers, and those who find solace in solitude.
+In a world full of noise, 11Lotus is your sanctuary of softness—a silent
+companion designed to soothe the stressed mind and hold your deepest secrets.
 </p>
 <div class="price">$23.00</div>
 <a href="" class="btn-premium">Reserve Your Mystery</a>
 </div>
 </section>
-<footer> &copy; 2026 11LOTUS OFFICIAL | CRAFTED FOR THE EXTRAORDINARY </footer>
+
+<footer> &copy; 2026 11LOTUS OFFICIAL | ELEGANCE IN EVERY HUG </footer>
+
 </body>
 </html>
