Enhance styling and button click behavior
Updated styles and button functionality in index.html.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 body { margin: 0; background-color: #050505; color: #ffffff; font-family: sans-serif; text-align: center; scroll-behavior: smooth; }
 header { height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; background: radial-gradient(circle at center, #1a1a1a 0%, #050505 100%); }
 .main-logo { width: 320px; margin-bottom: 25px; filter: drop-shadow(0 0 15px rgba(212, 175, 55, 0.3)); }
-.hero-tagline { font-size: 14px; letter-spacing: 8px; text-transform: uppercase; color: #d4af37; margin-top: 10px; }
+.hero-tagline { font-size: 14px; letter-spacing: 8px; text-transform: uppercase; color: #d4af37; margin-top: 10px; font-weight: bold; }
 section { padding: 100px 20px; border-top: 1px solid #111; }
 .box-card { border: 1px solid rgba(212, 175, 55, 0.2); max-width: 550px; margin: 0 auto; padding: 70px 40px; background: #0d0d0d; box-shadow: 0 40px 100px rgba(0,0,0,0.9); }
-.headline { color: #d4af37; font-size: 32px; letter-spacing: 3px; margin-bottom: 25px; }
+.headline { color: #d4af37; font-size: 32px; letter-spacing: 3px; margin-bottom: 25px; font-family: serif; }
 .copy-text { color: #888; font-style: italic; line-height: 1.8; margin-bottom: 40px; font-weight: 200; }
 input[type="password"] { background: transparent; border: 1px solid #333; color: #fff; padding: 18px; width: 80%; margin-bottom: 25px; text-align: center; letter-spacing: 5px; }
 .btn-premium { display: inline-block; padding: 20px 60px; border: 1px solid #d4af37; text-decoration: none; color: #d4af37; letter-spacing: 4px; text-transform: uppercase; transition: 0.5s; cursor: pointer; background: transparent; }
@@ -42,7 +42,7 @@ footer { padding: 80px; font-size: 12px; color: #333; letter-spacing: 3px; }
 
 
 
-<button class="btn-premium">Unlock Sanctuary</button>
+<button class="btn-premium" onclick="alert('Preparing your sanctuary...')">Unlock Sanctuary</button>
 </div>
 </section>
 <section id="community">
