--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
 <title>11LOTUS | The Silent Companion</title>
 <style>
 body { margin: 0; background-color: #050505; color: #ffffff; font-family: sans-serif; text-align: center; scroll-behavior: smooth; }
-header { height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; background: radial-gradient(circle at center, #1a1a1a 0%, #050505 100%); }
+header { height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; background: radial-gradient(circle, #1a1a1a 0%, #050505 100%); }
 .main-logo { width: 320px; margin-bottom: 25px; filter: drop-shadow(0 0 15px rgba(212, 175, 55, 0.3)); }
 .tagline { font-size: 14px; letter-spacing: 8px; text-transform: uppercase; color: #d4af37; font-weight: bold; margin-top: 10px; }
 section { padding: 100px 20px; border-top: 1px solid #111; }
-.box-card { border: 1px solid rgba(212, 175, 55, 0.2); max-width: 550px; margin: 0 auto; padding: 70px 40px; background: #0d0d0d; box-shadow: 0 40px 100px rgba(0,0,0,0.9); }
+.box-card { border: 1px solid rgba(212, 175, 55, 0.2); max-width: 500px; margin: 0 auto; padding: 70px 40px; background: #0d0d0d; box-shadow: 0 40px 100px rgba(0,0,0,0.9); }
 .headline { color: #d4af37; font-size: 32px; letter-spacing: 3px; margin-bottom: 25px; }
 .copy-text { color: #888; font-style: italic; line-height: 1.8; margin-bottom: 40px; font-weight: 200; }
+.price { font-size: 45px; margin: 30px 0; font-weight: 200; }
 .btn-premium { display: inline-block; padding: 20px 60px; border: 1px solid #d4af37; text-decoration: none; color: #d4af37; letter-spacing: 4px; text-transform: uppercase; transition: 0.5s; cursor: pointer; background: transparent; }
 .btn-premium:hover { background-color: #d4af37; color: #000; box-shadow: 0 0 40px rgba(212, 175, 55, 0.3); }
-.price { font-size: 45px; margin: 30px 0; font-weight: 200; }
 footer { padding: 80px; font-size: 12px; color: #333; letter-spacing: 3px; }
 </style>
 </head>
 <body>
 <header>
-<img src="logo.png" alt="11Lotus Logo" class="main-logo">
+<img src="logo.jpg" alt="11Lotus Logo" class="main-logo">
 <div class="tagline">The Silent Companion</div>
 </header>
 <section>
@@ -36,10 +36,10 @@ footer { padding: 80px; font-size: 12px; color: #333; letter-spacing: 3px; }
 <section id="scan" style="background-color: #080808;">
 <div class="box-card">
 <h2 class="headline">Scan Your Soul</h2>
-<p class="copy-text">Unlock your private sanctuary and personal diary with your secret key.</p>
+<p class="copy-text">Enter your secret key to unlock your private sanctuary and personal diary.</p>
 <button class="btn-premium">Unlock Sanctuary</button>
 </div>
 </section>
-<footer> &copy; 2026 11LOTUS OFFICIAL </footer>
+<footer> &copy; 2026 11LOTUS OFFICIAL | CRAFTED FOR THE EXTRAORDINARY </footer>
 </body>
 </html>
